2014-04-04  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Do not load MIB files (DISPLAY-HINTS may
	  cause MAC addresses to be displayed in a different format).

2014-04-04  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Lowered the number of retries.

2014-04-03  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Remove the symbolic labels from
	  enumeration values.

2014-04-03  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Fixed a typo.

2014-04-03  Koichiro KIKUCHI <koichiro@rworks.jp>

	* bin/tentacle_server: Updated to the logfile supported version.

2014-04-03  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Added to the repository. Recon SNMP L2
	  network scan script.

2014-03-31  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Execute more
	actions to snmp alerts.

2014-03-27  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Can change
	order in varbinds.

2014-03-20  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf.new,
	conf/pandora_server.conf.windows: Restart on mysql connection
	failure enabled by default.

2014-03-20  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Move WMI query safe_output 
	function to before the quotes ssubstitution to fix
	any WMI component with double quotes and WMI Wizard

2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_db.pl: fixed the notinit_count in the agents after
	the delete not init modules.

2014-03-13  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Do not compact proc modules.

2014-03-13  Mario Pulido <mario.pulido@artica.es>

	* pandora_server.redhat.spec: Added netflow directory

2014-03-13  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm
	  util/pandora_dbstress.pl: Fixed bug executing
	pandora_dbstress.

2014-03-05  Sergio Martin <sergio.martin@artica.es>
